2001-11-28  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (_IO_flush_all_lockp): New function.  The same code
	as the old _IO_flush_all but lock only if parameter is nonzero.
	(_IO_flush_all): Call _IO_flush_all_lockp with 1 as parameter.
	* libio/libioP.h: Add prototype for _IO_flush_all_lockp.
	* sysdeps/generic/abort.c (fflush): Define to _IO_flush_all_lockp(0)
	if libio is used.

2001-11-28  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/fpu/bits/mathinline.h (__signbitf, __signbit,
	__signbitl): Only define for ISO C99.

2001-11-22  Thorsten Kukuk  <kukuk@suse.de>

	* nss/nss_files/files-hosts.c (_nss_files_get##name##_r): Set
	herrnop to NETDB_INTERNAL if we run out of buffer space.

2001-11-28  Ulrich Drepper  <drepper@redhat.com>

	* nss/nss_files/files-XXX.c (internal_getent): Correct input
	overflow test for platforms with signed char.
	Reported by Andrew Haley <aph@cambridge.redhat.com>.

2001-11-28  Bruno Haible  <bruno@clisp.org>

	* locale/programs/simple-hash.c (lookup_2): Remove function.
	(insert_entry_2): Call lookup instead of lookup_2.

2001-03-04  Bruno Haible  <bruno@clisp.org>

	* intl/dcigettext.c (DCIGETTEXT): Increment path_max proportionally.

2001-10-31  Bruno Haible  <bruno@clisp.org>

	* intl/plural.y: Include <stddef.h>, needed for NULL with SunOS 4 cc.

2001-03-21  Bruno Haible  <bruno@clisp.org>

	* intl/dcigettext.c (_nl_state_lock): Mark as #ifdef _LIBC. AIX 3 xlc
	chokes on empty macro arguments.
	* intl/plural.y: Add #pragma for alloca on AIX 3.

2001-11-27  Ulrich Drepper  <drepper@redhat.com>

	* intl/dcigettext.c (guess_category_value): Only implement for
	glibc.  Otherwise rely on function _nl_locale_name which isn't
	present in the glibc sources.

2001-09-24  Bruno Haible  <bruno@clisp.org>

	* intl/loadmsgcat.c (_nl_init_domain_conv): Also enable
	transliteration when building on a glibc system but outside glibc.

2001-09-22  Bruno Haible  <bruno@clisp.org>
